GPF-851 fix agp table header gap when scrolling

--- a/gpfjs/src/app/autism-gene-profiles-table/autism-gene-profiles-table.component.css
+++ b/gpfjs/src/app/autism-gene-profiles-table/autism-gene-profiles-table.component.css
@@ -68,12 +68,12 @@ td, th, .table-subheader, .table-main-header {
 
 thead th {
   position: sticky;
-  top: 36px;
+  top: 34px;
 }
 
 .effect-type-header {
   position: sticky;
-  top: 186px;
+  top: 184px;
 }
 
 .table-main-header {
